--- a/Css/style.css
+++ b/Css/style.css
@@ -1,8 +1,181 @@
-body {
-  background-image: url("Images/caribbean.jpg");
-  alt: inherit; }
+html {
+  height: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
+.three-blocks {
+  background-color: white;
+  min-height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 1.2em;
+  line-height: 1.3; }
+  .three-blocks .block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center; }
+    .three-blocks .block figure img {
+      height: 150px;
+      border-radius: 5px;
+      border-bottom-right-radius: 25px;
+      border-top-left-radius: 25px; }
+
+body {
+  background-image: url("Images/experience.jpg");
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+p {
+  font-size: 20px; }
+
+.logo {
+  width: 500px;
+  background-image: url("Images/palmresortslogo.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: all 2s ease-in 1s;
+  -webkit-transition: all 2s ease-in 1s;
+  -moz-transition: all 2s ease-in 1s;
+  -o-transition: all 2s ease-in 1s; }
+
+.logo:hover {
+  background-image: url("Images/PalmResortsLogosunset.jpg");
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-name: bounceIn;
+          animation-name: bounceIn; }
+
+@-webkit-keyframes bounceIn {
+  0% {
+    -webkit-transform: scale(0.1);
+            transform: scale(0.1);
+    opacity: 0; }
+  60% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    opacity: 1; }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
+
+@keyframes bounceIn {
+  0% {
+    -webkit-transform: scale(0.1);
+            transform: scale(0.1);
+    opacity: 0; }
+  60% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    opacity: 1; }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
 header {
-  color: #f3c268; }
+  background-color: #f3c268;
+  color: #f0f0a1;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-name: pulse;
+          animation-name: pulse; }
+
+@-webkit-keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); }
+  50% {
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05); }
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); } }
+
+@keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); }
+  50% {
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05); }
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); } }
+.pulse {
+  -webkit-animation-name: pulse;
+  animation-name: pulse; }
+
+nav {
+  width: 200px;
+  height: 350px;
+  background-color: #14978a; }
+
+.container {
+  background-image: url("Images/oceanbeach.jpg");
+  width: 80%; }
+  .container .first {
+    width: 800px;
+    height: 500px;
+    background-color: #f0f0a1;
+    -webkit-transition: opacity 300ms ease-in-out 1s;
+    transition: opacity 300ms ease-in-out 1s;
+    -webkit-animation-delay: 0.1ms;
+            animation-delay: 0.1ms;
+    border-radius: 30px;
+    background-image: url("Images/experience.jpg");
+    -webkit-animation-duration: 2s;
+            animation-duration: 2s;
+    -webkit-animation-name: bounceIn;
+            animation-name: bounceIn; }
+  .container .first :hover {
+    -webkit-animation-duration: 2s;
+            animation-duration: 2s;
+    -webkit-animation-name: bounceIn;
+            animation-name: bounceIn; }
+  .container .second :hover {
+    -webkit-animation-duration: 2s;
+            animation-duration: 2s;
+    -webkit-animation-name: bounceIn;
+            animation-name: bounceIn; }
+  .container .second {
+    width: 800px;
+    height: 500px;
+    border-radius: 30px;
+    background-color: #f0f0a1;
+    -webkit-animation-duration: 2s;
+            animation-duration: 2s;
+    -webkit-animation-name: bounceIn;
+            animation-name: bounceIn; }
+  .container .box {
+    width: 100px;
+    height: 100px;
+    background-color: #f3c268;
+    border-radius: 30px;
+    -webkit-transition-timing-function: linear;
+            transition-timing-function: linear;
+    -webkit-transition-timing-function: ease-in;
+            transition-timing-function: ease-in;
+    -webkit-animation-name: bounceIn;
+            animation-name: bounceIn;
+    -webkit-transition-timing-function: cubic-bezier(0, 0, 1, 1);
+            transition-timing-function: cubic-bezier(0, 0, 1, 1); }
+  .container .box :hover {
+    -webkit-animation-duration: 2s;
+            animation-duration: 2s;
+    -webkit-animation-name: bounceIn;
+            animation-name: bounceIn; }
 
 /*# sourceMappingURL=style.css.map */
