--- a/Scss/main.scss
+++ b/Scss/main.scss
@@ -3,10 +3,160 @@
 @import 'partials/colors';
 @import 'partials/variables';
 
+html{
+    height: 100%;
+    box-sizing: border-box;
+}
+
+
+
+
+
+.three-blocks{
+    background-color: white;
+    min-height: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 1.2em;
+    line-height: 1.3;
+    .block{
+        display: flex;
+        flex-basis: 30%;
+        flex-direction: column;
+        text-align: center;
+        figure{
+            img{
+                height:150px;
+                border-radius: 5px;
+                border-bottom-right-radius: 25px;
+                border-top-left-radius: 25px;
+            }
+        }
+    }
+}
 body{
-    background-image: url("Images/caribbean.jpg");
-    alt: inherit;
+    background-image:url("Images/experience.jpg");
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+ }
+ p{
+     font-size: 20px;
+ }
+.logo{
+    width: 500px;
+
+    background-image: url("Images/palmresortslogo.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    transition:all 2s ease-in 1s;
+    -webkit-transition:all 2s ease-in 1s;
+    -moz-transition:all 2s ease-in 1s;
+    -o-transition:all 2s ease-in 1s;
+    
 }
-header{
-    color:$primary_heading_color;
+ .logo:hover{
+background-image: url("Images/PalmResortsLogosunset.jpg");
+animation-duration: 2s;
+animation-name: bounceIn;
+
+ }
+ @keyframes bounceIn {
+    0% {
+      transform: scale(0.1);
+      opacity: 0;
+    }
+    60% {
+      transform: scale(1.2);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+ header{
+     background-color:$primary_heading_color;
+     color: $secondary_color;
+     animation-duration: 2s;
+     
+     animation-name: pulse;
+ }
+ @keyframes pulse {
+    from {
+      -webkit-transform: scale3d(1, 1, 1);
+      transform: scale3d(1, 1, 1);
+    }
+  
+    50% {
+      -webkit-transform: scale3d(1.05, 1.05, 1.05);
+      transform: scale3d(1.05, 1.05, 1.05);
+    }
+  
+    to {
+      -webkit-transform: scale3d(1, 1, 1);
+      transform: scale3d(1, 1, 1);
+    }
+  }
+  
+  .pulse {
+    -webkit-animation-name: pulse;
+    animation-name: pulse;
+  }
+  
+ 
+ nav{
+     width:200px;
+     height: 350px;
+     background-color: rgb(20, 151, 138);
+ }
+ 
+ .container{
+    background-image: url("Images/oceanbeach.jpg");
+    width:80%;
+.first{
+    width: 800px;
+    height:500px;
+    background-color:$secondary_color;
+    transition: opacity 300ms ease-in-out 1s;
+   animation-delay: 0.1ms;
+   border-radius: 30px; 
+   background-image: url("Images/experience.jpg");
+   animation-duration: 2s;
+  animation-name: bounceIn;
+  
 }
+.first :hover{
+    animation-duration: 2s;
+    animation-name: bounceIn;
+}
+.second :hover{
+    animation-duration: 2s;
+    animation-name: bounceIn;
+}
+.second{
+width:800px;
+height: 500px;
+border-radius: 30px;
+background-color: $secondary_color; 
+animation-duration: 2s;
+animation-name: bounceIn;
+
+}
+.box{
+    width: 100px;
+    height: 100px;
+    background-color: $primary_heading_color;
+    border-radius: 30px;
+    transition-timing-function: linear;
+transition-timing-function: ease-in;
+animation-name: bounceIn;
+transition-timing-function: cubic-bezier(0.0, 0.0, 1.0, 1.0);
+}
+.box :hover{
+    animation-duration: 2s;
+    animation-name: bounceIn;
+}
+}
+ 
